[package]
name = "elementtree"
version = "1.1.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
description = "Parse an XML file into Python elementtree like structure"
documentation = "http://docs.rs/elementtree"
repository = "https://github.com/mitsuhiko/elementtree-rust"
keywords = ["xml", "parse", "elementtree"]
license = "Apache-2.0"
readme = "README.md"
edition = "2018"
rust-version = "1.49.0"

[dependencies]
xml-rs = "0.8"
string_cache = "0.8"
