[package]
name = "elementtree"
version = "1.2.2"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
description = "Parse an XML file into Python elementtree like structure"
documentation = "http://docs.rs/elementtree"
repository = "https://github.com/mitsuhiko/elementtree-rust"
keywords = ["xml", "parse", "elementtree"]
license = "MIT"
readme = "README.md"
edition = "2018"
rust-version = "1.49.0"

[dependencies]
string_cache = "0.8"

[dev-dependencies]
lazy_static = "1.4.0"
